language/tools/move-cli/tests/build_tests/include_exclude_stdlib/args.exp
Command `package build -v`:
BUILDING build_include_exclude_stdlib
error[E03002]: unbound module
  ┌─ ./sources/UseSigner.move:3:7
  │
3 │   use Std::Signer;
  │       ^^^^^^^^^^^ Invalid 'use'. Unbound module: '(Std=0x1)::Signer'

error[E03002]: unbound module
  ┌─ ./sources/UseSigner.move:6:5
  │
6 │     Signer::address_of(account)
  │     ^^^^^^ Unbound module alias 'Signer'

Command `-d -v package build`:
INCLUDING DEPENDENCY MoveStdlib
BUILDING build_include_exclude_stdlib
